--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,29 @@
-name: Build Executables
+name: Build and Test
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
-  build-windows:
+  test:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, "3.10"]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e ".[dev]"
+    - name: Run tests
+      run: pytest tests/
+
+  build:
+    needs: test
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,29 +36,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Build with PyInstaller
-      run: pyinstaller devmatic.spec
-    - name: Upload Windows artifact
+      run: |
+        python scripts/build.py
+    - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: devmatic-windows
-        path: dist/devmatic.exe
-
-  build-macos:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Build with PyInstaller
-      run: pyinstaller devmatic.spec
-    - name: Upload macOS artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: devmatic-macos
-        path: dist/DevMatic.app 
+        path: dist/devmatic.exe 
