--- a/.gitignore
+++ b/.gitignore
@@ -24,39 +24,14 @@ wheels/
 venv/
 env/
 ENV/
-.env
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-.project
-.pydevproject
-.settings/
 
 # DevMatic specific
 SDK/
-sdk.json
-sdk.env
-*.msi
-*.exe
-*.zip
-*.tar.gz
-*.tgz
-*.tar
-temp_*/
-
-# Logs and databases
+*.env
 *.log
-*.sqlite
-*.db
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
