--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-typer
-rich
-pyinstaller 
+typer>=0.9.0
+rich>=13.7.0
+aiohttp>=3.9.0
+pywin32>=306
+pytest>=7.4.0
+black>=23.12.0
+isort>=5.13.0
+flake8>=7.0.0
