--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,16 @@ license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "typer",
-    "rich",
-    "aiohttp",
-    "pywin32",
+    "rich>=13.7.0",
+    "aiohttp>=3.9.0",
+    "pywin32>=306"
 ]
 
 [project.scripts]
-devmatic = "devmatic.cli.main:app"
+devmatic = "devmatic.__main__:main"
+
+[project.entry-points."console_scripts"]
+devmatic = "devmatic.__main__:main"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
