--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,40 @@
+# Core dependencies
 typer>=0.9.0
 rich>=13.7.0
 aiohttp>=3.9.0
 pywin32>=306
+tqdm>=4.66.1
+
+# Async support
+asyncio>=3.4.3
+aiofiles>=23.2.1
+
+# File handling
+python-magic-bin>=0.4.14; platform_system=='Windows'
+python-magic>=0.4.27; platform_system!='Windows'
+
+# Development dependencies
 pytest>=7.4.0
+pytest-asyncio>=0.23.2
+pytest-cov>=4.1.0
 black>=23.12.0
 isort>=5.13.0
 flake8>=7.0.0
+mypy>=1.8.0
+
+# Build dependencies
+build>=1.0.3
+setuptools>=45.0.0
+wheel>=0.41.2
+pyinstaller>=6.3.0
+
+# Documentation
+mkdocs>=1.5.3
+mkdocs-material>=9.5.3
+mkdocstrings>=0.24.0
+mkdocstrings-python>=1.7.5
+
+# Type stubs
+types-aiofiles>=23.2.0.0
+types-setuptools>=69.0.0.0
+types-tqdm>=4.66.0.2
